[metadata]
name = pyconduit
version = 1.0.5
author = ysfchn
description = A simple workflow manager that can execute developer-defined methods from user-defined workflow files.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ysfchn/pyconduit
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation = https://pyconduit.ysfchn.com/

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    wrapt
    typing-extensions

[options.extras_require]
all = pydantic>=1.7;
